<resources>
    <string name="app_name">ClassicPractice</string>
    <string name="bottom_list">LIST</string>
    <string name="bottom_video">VIDEO</string>
    <string name="bottom_car">CAR</string>
    <string name="bottom_data">DATA</string>
    <string name="bottom_my">MY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="select_all">全选</string>
    <string name="comment">评论</string>
</resources>